--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Flask==1.1.2
+Flask==2.0.2
 pandas==1.3.5
-scikit_learn==0.22.1
-numpy==1.20.3
+scikit-learn==1.0.2
+numpy==1.21.5
 gunicorn==20.0.4
 Werkzeug==0.16.0
 Jinja2==2.10.1
